# routes/customers.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 const customersController = require('../controllers/customersController');
 const { validateCustomer } = require('../validation/customerValidation');
+const { isAuthenticated } = require('../middleware/auth');
 
 // #swagger.tags = ['Customers']
 router.get('/', customersController.getAllCustomers);
@@ -10,12 +11,24 @@ router.get('/', customersController.getAllCustomers);
 router.get('/:id', customersController.getCustomerById);
 
 // #swagger.tags = ['Customers']
-router.post('/', validateCustomer, customersController.createCustomer);
+/* #swagger.parameters['body'] = {
+  in: 'body',
+  description: 'Customer information',
+  required: true,
+  schema: { $ref: '#/definitions/Customer' }
+} */
+router.post('/', isAuthenticated, validateCustomer, customersController.createCustomer);
 
 // #swagger.tags = ['Customers']
-router.put('/:id', validateCustomer, customersController.updateCustomer);
+/* #swagger.parameters['body'] = {
+  in: 'body',
+  description: 'Customer information',
+  required: true,
+  schema: { $ref: '#/definitions/Customer' }
+} */
+router.put('/:id', isAuthenticated, validateCustomer, customersController.updateCustomer);
 
 // #swagger.tags = ['Customers']
-router.delete('/:id', customersController.deleteCustomer);
+router.delete('/:id', isAuthenticated, customersController.deleteCustomer);
 
 module.exports = router;
