# routes/services.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 const servicesController = require('../controllers/servicesController');
 const { validateService } = require('../validation/serviceValidation');
+const { isAuthenticated } = require('../middleware/auth');
 
 // #swagger.tags = ['Services']
 router.get('/', servicesController.getAllServices);
@@ -10,12 +11,24 @@ router.get('/', servicesController.getAllServices);
 router.get('/:id', servicesController.getServiceById);
 
 // #swagger.tags = ['Services']
-router.post('/', validateService, servicesController.createService);
+/* #swagger.parameters['body'] = {
+  in: 'body',
+  description: 'Service information',
+  required: true,
+  schema: { $ref: '#/definitions/Service' }
+} */
+router.post('/', isAuthenticated, validateService, servicesController.createService);
 
 // #swagger.tags = ['Services']
-router.put('/:id', validateService, servicesController.updateService);
+/* #swagger.parameters['body'] = {
+  in: 'body',
+  description: 'Service information',
+  required: true,
+  schema: { $ref: '#/definitions/Service' }
+} */
+router.put('/:id', isAuthenticated, validateService, servicesController.updateService);
 
 // #swagger.tags = ['Services']
-router.delete('/:id', servicesController.deleteService);
+router.delete('/:id', isAuthenticated, servicesController.deleteService);
 
 module.exports = router;
